--- a/github_test.ipynb
+++ b/github_test.ipynb
@@ -10,11 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "294db6a6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib as plt\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "212931ac",
    "metadata": {},
    "outputs": [
@@ -134,6 +135,76 @@
        "      <td>0.339290</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>194611090DTF</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>Celtics</td>\n",
+       "      <td>Falcons</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>69</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.386818</td>\n",
+       "      <td>-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>194611110NYK</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>Knicks</td>\n",
+       "      <td>Stags</td>\n",
+       "      <td>H</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68</td>\n",
+       "      <td>78</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.629479</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>194611130CHS</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>Celtics</td>\n",
+       "      <td>Stags</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>61</td>\n",
+       "      <td>71</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.291740</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>194611140STB</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>Celtics</td>\n",
+       "      <td>Bombers</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>64</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.313890</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>194611160BOS</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>Celtics</td>\n",
+       "      <td>Huskies</td>\n",
+       "      <td>H</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53</td>\n",
+       "      <td>49</td>\n",
+       "      <td>W</td>\n",
+       "      <td>0.602702</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -145,23 +216,33 @@
        "2  194611020PRO     1947  Celtics  Steamrollers             A            0   \n",
        "3  194611050BOS     1947  Celtics         Stags             H            0   \n",
        "4  194611070STB     1947   Knicks       Bombers             A            0   \n",
+       "5  194611090DTF     1947  Celtics       Falcons             A            0   \n",
+       "6  194611110NYK     1947   Knicks         Stags             H            0   \n",
+       "7  194611130CHS     1947  Celtics         Stags             A            0   \n",
+       "8  194611140STB     1947  Celtics       Bombers             A            0   \n",
+       "9  194611160BOS     1947  Celtics       Huskies             H            0   \n",
        "\n",
        "   pts  opp_pts game_result  forecast  point_diff  \n",
        "0   68       66           W  0.359935           2  \n",
        "1   47       63           L  0.368899         -16  \n",
        "2   53       59           L  0.359935          -6  \n",
        "3   55       57           L  0.620204          -2  \n",
-       "4   68       63           W  0.339290           5  "
+       "4   68       63           W  0.339290           5  \n",
+       "5   46       69           L  0.386818         -23  \n",
+       "6   68       78           L  0.629479         -10  \n",
+       "7   61       71           L  0.291740         -10  \n",
+       "8   62       64           L  0.313890          -2  \n",
+       "9   53       49           W  0.602702           4  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nba = pd.read_csv(\"C:\\\\Users\\\\keena\\\\Downloads\\\\Codecademy_NBA_Trends_Project\\\\Codecademy_NBA_Trends_Project\\\\nba_games.csv\")\n",
-    "nba.head()"
+    "nba = pd.read_csv(\"https://raw.githubusercontent.com/keenanandrew/su-data-project/main/nba_games.csv\")\n",
+    "nba.head(10)"
    ]
   },
   {
