--- a/github_test.ipynb
+++ b/github_test.ipynb
@@ -246,12 +246,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "51a9393d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Right. Let's try this again."
+   ]
   }
  ],
  "metadata": {
