--- a/github_test.ipynb
+++ b/github_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "294db6a6",
    "metadata": {},
    "outputs": [],
@@ -251,6 +251,277 @@
    "metadata": {},
    "source": [
     "Right. Let's try this again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c8cec764",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year_id</th>\n",
+       "      <th>is_playoffs</th>\n",
+       "      <th>pts</th>\n",
+       "      <th>opp_pts</th>\n",
+       "      <th>forecast</th>\n",
+       "      <th>point_diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>24359.000000</td>\n",
+       "      <td>24359.000000</td>\n",
+       "      <td>24359.000000</td>\n",
+       "      <td>24359.000000</td>\n",
+       "      <td>24359.000000</td>\n",
+       "      <td>24359.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1986.916581</td>\n",
+       "      <td>0.077754</td>\n",
+       "      <td>103.384663</td>\n",
+       "      <td>102.438154</td>\n",
+       "      <td>0.527805</td>\n",
+       "      <td>0.946508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>17.427172</td>\n",
+       "      <td>0.267789</td>\n",
+       "      <td>14.724792</td>\n",
+       "      <td>14.812181</td>\n",
+       "      <td>0.213054</td>\n",
+       "      <td>13.341020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1947.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>0.024271</td>\n",
+       "      <td>-62.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1974.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>0.359191</td>\n",
+       "      <td>-8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1988.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>103.000000</td>\n",
+       "      <td>102.000000</td>\n",
+       "      <td>0.533177</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2002.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>113.000000</td>\n",
+       "      <td>112.000000</td>\n",
+       "      <td>0.698763</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2015.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>173.000000</td>\n",
+       "      <td>176.000000</td>\n",
+       "      <td>0.976221</td>\n",
+       "      <td>56.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            year_id   is_playoffs           pts       opp_pts      forecast  \\\n",
+       "count  24359.000000  24359.000000  24359.000000  24359.000000  24359.000000   \n",
+       "mean    1986.916581      0.077754    103.384663    102.438154      0.527805   \n",
+       "std       17.427172      0.267789     14.724792     14.812181      0.213054   \n",
+       "min     1947.000000      0.000000     43.000000     38.000000      0.024271   \n",
+       "25%     1974.000000      0.000000     94.000000     93.000000      0.359191   \n",
+       "50%     1988.000000      0.000000    103.000000    102.000000      0.533177   \n",
+       "75%     2002.000000      0.000000    113.000000    112.000000      0.698763   \n",
+       "max     2015.000000      1.000000    173.000000    176.000000      0.976221   \n",
+       "\n",
+       "         point_diff  \n",
+       "count  24359.000000  \n",
+       "mean       0.946508  \n",
+       "std       13.341020  \n",
+       "min      -62.000000  \n",
+       "25%       -8.000000  \n",
+       "50%        2.000000  \n",
+       "75%       10.000000  \n",
+       "max       56.000000  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8b5d8769",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "game_id           object\n",
+       "year_id            int64\n",
+       "fran_id           object\n",
+       "opp_fran          object\n",
+       "game_location     object\n",
+       "is_playoffs        int64\n",
+       "pts                int64\n",
+       "opp_pts            int64\n",
+       "game_result       object\n",
+       "forecast         float64\n",
+       "point_diff         int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "848056d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.97018547408562\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sns.scatterplot(nba, x='pts', y = 'fran_id')\n",
+    "\n",
+    "nba.fran_id.unique()\n",
+    "\n",
+    "knicks_pts = nba.pts[nba.fran_id == 'Knicks']\n",
+    "\n",
+    "knicks_avg = knicks_pts.mean()\n",
+    "\n",
+    "print(knicks_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4642db94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            game_id  year_id  fran_id   opp_fran game_location  is_playoffs  \\\n",
+      "22167  201010260BOS     2011  Celtics       Heat             H            0   \n",
+      "22168  201010270CLE     2011  Celtics  Cavaliers             A            0   \n",
+      "22169  201010270NJN     2011     Nets    Pistons             H            0   \n",
+      "22170  201010270OKC     2011  Thunder      Bulls             H            0   \n",
+      "22171  201010270SAS     2011    Spurs     Pacers             H            0   \n",
+      "...             ...      ...      ...        ...           ...          ...   \n",
+      "22608  201105170DAL     2011  Thunder  Mavericks             A            1   \n",
+      "22609  201105190DAL     2011  Thunder  Mavericks             A            1   \n",
+      "22610  201105210OKC     2011  Thunder  Mavericks             H            1   \n",
+      "22611  201105230OKC     2011  Thunder  Mavericks             H            1   \n",
+      "22612  201105250DAL     2011  Thunder  Mavericks             A            1   \n",
+      "\n",
+      "       pts  opp_pts game_result  forecast  point_diff  \n",
+      "22167   88       80           W  0.735582           8  \n",
+      "22168   87       95           L  0.384577          -8  \n",
+      "22169  101       98           W  0.587040           3  \n",
+      "22170  106       95           W  0.739462          11  \n",
+      "22171  122      109           W  0.761740          13  \n",
+      "...    ...      ...         ...       ...         ...  \n",
+      "22608  112      121           L  0.333344          -9  \n",
+      "22609  106      100           W  0.318375           6  \n",
+      "22610   87       93           L  0.628495          -6  \n",
+      "22611  105      112           L  0.599898          -7  \n",
+      "22612   96      100           L  0.295381          -4  \n",
+      "\n",
+      "[446 rows x 11 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nba.head()\n",
+    "\n",
+    "nba_2011 = nba[nba.year_id == 2011]\n",
+    "\n",
+    "print(nba_2011)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "aebda737",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.87443946188341\n"
+     ]
+    }
+   ],
+   "source": [
+    "nba_2011.describe()\n",
+    "\n",
+    "nba_2011_pts_avg = nba_2011.pts.mean()\n",
+    "\n",
+    "print(nba_2011_pts_avg)"
    ]
   }
  ],
